--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,8 @@
     "eslint": "^4.12.1",
     "express": "^4.16.2",
     "morgan": "^1.9.0",
-    "nodemon": "^1.12.1"
+    "nodemon": "^1.12.1",
+    "sequelize": "^4.27.0",
+    "sqlite3": "^3.1.8"
   }
 }
