--- a/server/package.json
+++ b/server/package.json
@@ -15,9 +15,15 @@
     "cors": "^2.8.4",
     "eslint": "^4.12.1",
     "express": "^4.16.2",
+    "joi": "^13.0.2",
     "morgan": "^1.9.0",
     "nodemon": "^1.12.1",
     "sequelize": "^4.27.0",
     "sqlite3": "^3.1.8"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "rimraf": "^2.6.2"
   }
 }
