--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "express": "^4.16.2",
     "joi": "^13.0.2",
     "jsonwebtoken": "^8.1.0",
+    "lodash": "^4.17.4",
     "morgan": "^1.9.0",
     "nodemon": "^1.12.1",
     "passport": "^0.4.0",
