--- a/server/package.json
+++ b/server/package.json
@@ -16,27 +16,30 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "cors": "^2.8.4",
+    "crawler": "^1.1.2",
     "eslint": "^4.12.1",
     "express": "^4.16.2",
     "joi": "^13.0.2",
     "jsonwebtoken": "^8.1.0",
     "lodash": "^4.17.4",
+    "mongoose": "^5.0.7",
     "morgan": "^1.9.0",
     "nodemon": "^1.12.1",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.1",
+    "phantom": "^4.0.12",
     "sequelize": "^4.27.0",
     "sqlite3": "^3.1.13"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
-    "rimraf": "^2.6.2",
+    "eslint": "^4.6.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
-    "eslint": "^4.6.0"
+    "rimraf": "^2.6.2"
   }
 }
